--- a/frontend/app/components/layout/header/icons-right/IconsRight.module.scss
+++ b/frontend/app/components/layout/header/icons-right/IconsRight.module.scss
@@ -3,5 +3,5 @@
 }
 
 .button {
-	@apply inline-flex mx-2 items-center justify-center text-3xl to-purple ml-6 opacity-75 transition-opacity hover:opacity-100;
+	@apply inline-flex mx-2 items-center justify-center text-3xl text-purple ml-6 opacity-75 transition-opacity hover:opacity-100;
 }
